[metadata]
descripton-file = README.md

[flake8]
max-line-length = 140
exclude = .git, .tox, ./lib, ./include, ./bin, .venv

[nosetests]
rednose = 1
nocapture = 1
with-coverage = 1
cover-erase = 1
cover-inclusive = 1
cover-min-percentage = 99
cover-package = relayer
cover-html = 1

[mypy]
python_version = 3.6
ignore_missing_imports = True
disallow_untyped_defs = True
show_column_numbers = True
warn_redundant_casts = True
disallow_any_generics = True
html_report = .mypy-report
